force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Zip_Code__c</fullName>
    <label>Premises Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>