force-app/main/default/objects/MUSW__Application2__c/fields/abd_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>abd_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Point of contact. Does not need to be an owner.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Primary Contact)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>