force-app/main/default/objects/MUSW__Application2__c/fields/abd_Primary_License__c.field-meta.xml
<CustomField>
    <fullName>abd_Primary_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary License/Permit</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>