force-app/main/default/objects/MUSW__Application2__c/fields/abd_Privileges__c.field-meta.xml
<CustomField>
    <fullName>abd_Privileges__c</fullName>
    <label>Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday Sales</fullName>
            </value>
            <value>
                <fullName>Brew Pub</fullName>
                <isActive>false</isActive>
                <label>Brew Pub</label>
            </value>
            <value>
                <fullName>Catering</fullName>
                <isActive>false</isActive>
                <label>Catering</label>
            </value>
            <value>
                <fullName>High Proof Brew Pub</fullName>
                <isActive>false</isActive>
                <label>High Proof Brew Pub</label>
            </value>
            <value>
                <fullName>Living Quarters</fullName>
                <isActive>false</isActive>
                <label>Living Quarters</label>
            </value>
            <value>
                <fullName>Outdoor Service</fullName>
                <isActive>false</isActive>
                <label>Outdoor Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>