force-app/main/default/objects/MUSW__Application2__c/fields/abd_Product_name__c.field-meta.xml
<CustomField>
    <fullName>abd_Product_name__c</fullName>
    <label>Product name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>