force-app/main/default/objects/MUSW__Application2__c/fields/abd_Prorate_Percent__c.field-meta.xml
<CustomField>
    <fullName>abd_Prorate_Percent__c</fullName>
    <formula>abd_Calendar_Days__c / abd_Days_in_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorate %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>