force-app/main/default/objects/MUSW__Application2__c/fields/abd_Review_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Review_Start_Date__c</fullName>
    <label>Review Start Date</label>
    <type>Date</type>
</CustomField>