force-app/main/default/objects/MUSW__Application2__c/fields/abd_Sell_Gasoline__c.field-meta.xml
<CustomField>
    <fullName>abd_Sell_Gasoline__c</fullName>
    <label>Sell Gasoline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>