force-app/main/default/objects/MUSW__Application2__c/fields/abd_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>abd_Square_Footage__c</fullName>
    <label>Square Footage Building Interior</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>