force-app/main/default/objects/MUSW__Application2__c/fields/abd_Sunday_Fees__c.field-meta.xml
<CustomField>
    <fullName>abd_Sunday_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday Fees</label>
    <type>Checkbox</type>
</CustomField>