force-app/main/default/objects/MUSW__Application2__c/fields/abd_Sunday_Sales_License__c.field-meta.xml
<CustomField>
    <fullName>abd_Sunday_Sales_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sunday Sales License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Applications (Sunday Sales License)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>