force-app/main/default/objects/MUSW__Application2__c/fields/abd_Time_of_Auction_Beginning__c.field-meta.xml
<CustomField>
    <fullName>abd_Time_of_Auction_Beginning__c</fullName>
    <label>Time of Auction - Beginning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Time</valueSetName>
    </valueSet>
</CustomField>