force-app/main/default/objects/MUSW__Application2__c/fields/abd_Use_Mailing__c.field-meta.xml
<CustomField>
    <fullName>abd_Use_Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Mailing</label>
    <type>Checkbox</type>
</CustomField>