force-app/main/default/objects/MUSW__Application2__c/fields/Compliance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reason__c</fullName>
    <label>Compliance Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietor/Non Us Citizen</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor/Not Iowa</fullName>
            </value>
            <value>
                <fullName>Under 21</fullName>
            </value>
            <value>
                <fullName>Criminal History</fullName>
            </value>
            <value>
                <fullName># Bathrooms</fullName>
            </value>
            <value>
                <fullName>Under 25 Seats</fullName>
            </value>
            <value>
                <fullName>Owner Interest in Other Manufacturer Importer</fullName>
            </value>
            <value>
                <fullName>Owner Interest in Other Retail License</fullName>
            </value>
            <value>
                <fullName>Manufacturer/Importer Interest in Owner Business</fullName>
            </value>
            <value>
                <fullName>Other Paid Owner License Fee</fullName>
            </value>
            <value>
                <fullName>Others Provided Money</fullName>
            </value>
            <value>
                <fullName>Other Provided Equipment</fullName>
            </value>
            <value>
                <fullName>Owner Employed by Other Manufacturer Importer</fullName>
            </value>
            <value>
                <fullName>Retailer with Interest in Owner Business</fullName>
            </value>
            <value>
                <fullName>Owner Paid License Fee for Retailer</fullName>
            </value>
            <value>
                <fullName>Owner Provided Funds to Retailer</fullName>
            </value>
            <value>
                <fullName>Owner Interest in Equipment Used by Other Retailers</fullName>
            </value>
            <value>
                <fullName>Staff Employed by Other Retailer</fullName>
            </value>
            <value>
                <fullName>Partnership/Non Us Citizen</fullName>
            </value>
            <value>
                <fullName>Partnership/Not Iowa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>