force-app/main/default/objects/MUSW__Application2__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deleted Corp</fullName>
            </value>
            <value>
                <fullName>Deleted LLC</fullName>
            </value>
            <value>
                <fullName>Denied by Local Authority</fullName>
            </value>
            <value>
                <fullName>Unpaid Taxes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>