force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Account__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>