force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Fees__c</fullName>
    <label>Total Fees</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>