force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variance</fullName>
            </value>
            <value>
                <fullName>Development Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>