force-app/main/default/objects/MUSW__Application2__c/fields/Premises_Type__c.field-meta.xml
<CustomField>
    <fullName>Premises_Type__c</fullName>
    <label>Premises Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar/Tavern</fullName>
            </value>
            <value>
                <fullName>Beer Wholesaler</fullName>
            </value>
            <value>
                <fullName>Book Store</fullName>
            </value>
            <value>
                <fullName>Bowling Alley</fullName>
            </value>
            <value>
                <fullName>Brewer</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
            <value>
                <fullName>Coffee Shop</fullName>
            </value>
            <value>
                <fullName>Concession stand</fullName>
            </value>
            <value>
                <fullName>Convenience Store</fullName>
            </value>
            <value>
                <fullName>Convention Center/Hall</fullName>
            </value>
            <value>
                <fullName>Discount Store</fullName>
            </value>
            <value>
                <fullName>Distiller</fullName>
            </value>
            <value>
                <fullName>Excursion Boat (Non Gambling)</fullName>
            </value>
            <value>
                <fullName>Excursion Gambling Boat</fullName>
            </value>
            <value>
                <fullName>Fairgrounds</fullName>
            </value>
            <value>
                <fullName>Fire Station</fullName>
            </value>
            <value>
                <fullName>Golf Course</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Hotel/Motel</fullName>
            </value>
            <value>
                <fullName>Laundromat</fullName>
            </value>
            <value>
                <fullName>Liquor Store</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Museum/Arts Center</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Planes</fullName>
            </value>
            <value>
                <fullName>Private Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>