force-app/main/default/objects/MUSW__Application2__c/fields/Primary_Lic_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lic_Type__c</fullName>
    <formula>TEXT(abd_Primary_License__r.abd_License_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary_Lic_Type</label>
    <type>Text</type>
</CustomField>