force-app/main/default/objects/MUSW__Application2__c/fields/temp_expcheck__c.field-meta.xml
<CustomField>
    <fullName>temp_expcheck__c</fullName>
    <formula>IF (abd_Effective_End_Date_of_Current_Lic__c &lt; abd_Effective_End_Date__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>temp_expcheck</label>
    <type>Checkbox</type>
</CustomField>