force-app/main/default/objects/MUSW__Application2__c/fields/TTB_ID__c.field-meta.xml
<CustomField>
    <fullName>TTB_ID__c</fullName>
    <label>TTB ID #</label>
    <length>14</length>
    <type>Text</type>
</CustomField>