force-app/main/default/objects/MUSW__Application2__c/fields/Watchlist__c.field-meta.xml
<CustomField>
    <fullName>Watchlist__c</fullName>
    <label>Watchlist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Watchlist</valueSetName>
    </valueSet>
</CustomField>