force-app/main/default/objects/MUSW__Application2__c/fields/Watchlist_Color__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Color__c</fullName>
    <label>Watchlist Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>green</fullName>
                <default>true</default>
                <label>green</label>
            </value>
            <value>
                <fullName>yellow</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>