force-app/main/default/objects/MUSW__Application2__c/fields/Watchlist_Image__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Image__c</fullName>
    <formula>IF ( ISblank( TEXT(Watchlist_Color__c) ), 
IMAGE("/img/samples/color_green.gif", "green", 30, 30), 
IMAGE("/img/samples/color_" &amp; TEXT( Watchlist_Color__c ) &amp; ".gif", TEXT( Watchlist_Color__c ), 30, 30) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Watchlist Image</label>
    <type>Text</type>
</CustomField>