force-app/main/default/objects/MUSW__Application2__c/fields/zzz_caTest__c.field-meta.xml
<CustomField>
    <fullName>zzz_caTest__c</fullName>
    <formula>abd_Effective_End_Date__c - abd_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzz_caTest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>