force-app/main/default/objects/MUSW__Application2__c/recordTypes/Add_Privilege_or_License_to_Existing_License.recordType-meta.xml
<RecordType>
    <fullName>Add_Privilege_or_License_to_Existing_License</fullName>
    <active>true</active>
    <label>Add Privilege or License to Existing License</label>
</RecordType>