force-app/main/default/objects/MUSW__Application2__c/recordTypes/Additional_Locations_Application.recordType-meta.xml
<RecordType>
    <fullName>Additional_Locations_Application</fullName>
    <active>true</active>
    <label>Additional Locations Application</label>
</RecordType>