force-app/main/default/objects/MUSW__Application2__c/recordTypes/Auction_Application.recordType-meta.xml
<RecordType>
    <fullName>Auction_Application</fullName>
    <active>true</active>
    <label>Auction Application</label>
</RecordType>