force-app/main/default/objects/MUSW__Application2__c/recordTypes/Dram_Carrier_Change_Application.recordType-meta.xml
<RecordType>
    <fullName>Dram_Carrier_Change_Application</fullName>
    <active>true</active>
    <label>Dram Carrier Change Application</label>
</RecordType>