force-app/main/default/objects/MUSW__Application2__c/recordTypes/Keg_Registration.recordType-meta.xml
<RecordType>
    <fullName>Keg_Registration</fullName>
    <active>true</active>
    <label>Keg Registration</label>
</RecordType>