force-app/main/default/objects/MUSW__Application2__c/recordTypes/Label_Approval.recordType-meta.xml
<RecordType>
    <fullName>Label_Approval</fullName>
    <active>true</active>
    <label>Label Approval</label>
</RecordType>