force-app/main/default/objects/MUSW__Application2__c/recordTypes/New_Application.recordType-meta.xml
<RecordType>
    <fullName>New_Application</fullName>
    <active>true</active>
    <label>New Application</label>
</RecordType>