force-app/main/default/objects/MUSW__Application2__c/recordTypes/Ownership_Update.recordType-meta.xml
<RecordType>
    <fullName>Ownership_Update</fullName>
    <active>true</active>
    <label>Ownership Update</label>
</RecordType>