force-app/main/default/objects/MUSW__Application2__c/recordTypes/Premise_Update_Application.recordType-meta.xml
<RecordType>
    <fullName>Premise_Update_Application</fullName>
    <active>true</active>
    <label>Premises Update Application</label>
</RecordType>