force-app/main/default/objects/MUSW__Application2__c/recordTypes/Renewal_Application.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Application</fullName>
    <active>true</active>
    <label>Renewal Application</label>
</RecordType>