force-app/main/default/objects/MUSW__Application2__c/recordTypes/Temporary_Application.recordType-meta.xml
<RecordType>
    <fullName>Temporary_Application</fullName>
    <active>false</active>
    <label>Temporary Application</label>
</RecordType>