force-app/main/default/objects/MUSW__Application2__c/recordTypes/Transfer_of_License_Permit_Application.recordType-meta.xml
<RecordType>
    <fullName>Transfer_of_License_Permit_Application</fullName>
    <active>true</active>
    <label>Transfer of License/Permit Application</label>
</RecordType>