force-app/main/default/objects/MUSW__Application2__c/validationRules/Expiration_Check_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Check_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

IF (Blankvalue(abd_Effective_End_Date_of_Current_Lic__c,abd_Effective_End_Date__c) &lt; abd_Effective_End_Date__c, TRUE, FALSE),
 ISPICKVAL( abd_Application_Type__c, "Additional Locations")|| ISPICKVAL( abd_Application_Type__c, "Transfer License"),
!(ISNEW())
)</errorConditionFormula>
    <errorMessage>Application Expiration Date must be less than Primary License Expiration Date</errorMessage>
</ValidationRule>