force-app/main/default/objects/MUSW__Application2__c/validationRules/Prem_Update_Temp_End_DateReq.validationRule-meta.xml
<ValidationRule>
    <fullName>Prem_Update_Temp_End_DateReq</fullName>
    <active>true</active>
    <description>For Temp Premise Update Applications, an End Date is required</description>
    <errorConditionFormula>AND( 
TEXT(abd_Application_Type__c) = 'Premise Update', TEXT(abd_Temporary_or_Permanent__c ) = 'Temporary',
ISBLANK( abd_Premise_To__c ))</errorConditionFormula>
    <errorDisplayField>abd_Premise_To__c</errorDisplayField>
    <errorMessage>For Temp Premise Update Applications, an End Date is required</errorMessage>
</ValidationRule>