force-app/main/default/objects/MUSW__Application2__c/validationRules/Transfer_Temp_GT_7_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_Temp_GT_7_Days</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(abd_Application_Type__c, "Transfer License")
&amp;&amp;
ISPICKVAL(abd_Temporary_or_Permanent__c, "Temporary")
&amp;&amp;
IF(abd_Effective_End_Date__c -  abd_Effective_Date__c > 7,TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Temporary Transfer License Application cannot exceed 7 days</errorMessage>
</ValidationRule>