force-app/main/default/objects/MUSW__Application2__c/validationRules/X12m_8m_6m_Length_Licenses.validationRule-meta.xml
<ValidationRule>
    <fullName>X12m_8m_6m_Length_Licenses</fullName>
    <active>true</active>
    <description>Validates that the length of the license is 12 months, 8 months, 6 months for certain License types</description>
    <errorConditionFormula>AND(
NOT(TEXT( abd_Application_Type__c ) = "Additional Locations"),
IF(TEXT( abd_Length__c )="12 months"||TEXT( abd_Length__c )="8 months"||TEXT( abd_Length__c )="6 months",False,True),
NOT(TEXT( MUSW__Status__c )= "Pending"),
TEXT( abd_Primary_License__r.abd_License_Type__c )="WB"  
)</errorConditionFormula>
    <errorDisplayField>abd_Length__c</errorDisplayField>
    <errorMessage>This license type must have a length of 12 months, 8 months, or 6 months.</errorMessage>
</ValidationRule>