force-app/main/default/objects/MUSW__Application2__c/validationRules/X36_Hour_Length_Licenses.validationRule-meta.xml
<ValidationRule>
    <fullName>X36_Hour_Length_Licenses</fullName>
    <active>true</active>
    <description>Validates that the length of the license is 36 hours for certain License types</description>
    <errorConditionFormula>AND(
NOT(TEXT( abd_Application_Type__c ) = "Additional Locations"),
IF(TEXT( abd_Length__c )="36 hours",False,True),
NOT(TEXT( MUSW__Status__c )= "Pending"),
TEXT( abd_Primary_License__r.abd_License_Type__c )="CP"  
)</errorConditionFormula>
    <errorDisplayField>abd_Length__c</errorDisplayField>
    <errorMessage>This license type must have a length of 36 hours.</errorMessage>
</ValidationRule>