force-app/main/default/objects/MUSW__Application2__c/validationRules/XPermanent_Length_Licenses.validationRule-meta.xml
<ValidationRule>
    <fullName>XPermanent_Length_Licenses</fullName>
    <active>true</active>
    <description>Validates that the length of the license is Permanent for certain License types</description>
    <errorConditionFormula>AND(
NOT(TEXT( abd_Application_Type__c ) = "Additional Locations"),
IF(TEXT( abd_Length__c )="Permanent",False,True),
NOT(TEXT( MUSW__Status__c )= "Pending"),
TEXT( abd_Primary_License__r.abd_License_Type__c )="AC"  
)</errorConditionFormula>
    <errorDisplayField>abd_Length__c</errorDisplayField>
    <errorMessage>This license type must have a length of Permanent.</errorMessage>
</ValidationRule>