force-app/main/default/objects/MUSW__Application2__c/listViews/Approved_Applications.listView-meta.xml
<ListView>
    <fullName>Approved_Applications</fullName>
    <columns>NAME</columns>
    <columns>Primary_Lic_Type__c</columns>
    <columns>MUSW__Account__c</columns>
    <columns>abd_Effective_End_Date__c</columns>
    <columns>abd_Effective_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>abd_Application_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Applications</label>
</ListView>